fix: broken styles after refactoring

--- a/styles.css
+++ b/styles.css
@@ -77,7 +77,7 @@ ul {
 .side-column-container { align-content: flex-start; }
 aside table {width: 100%;}
 aside table tr td:first-child {text-align: left;}
-aside table tr td:last-child {
+.skill-grade table tr td:last-child {
   text-align: right;
   font-size: 1.3rem;
   color: var(--accent-color-light);
@@ -90,12 +90,12 @@ aside section > h3 {
 }
 
 .work-experience-stack {font-weight: 500;}
-main table {
+article table {
   width: 100%;
   text-align: left;
 }
-main table tr td:first-child {width: 30%;}
-main table p,
+article table tr td:first-child {width: 30%;}
+article table p,
 .about p {
   padding-top: .7rem;
   padding-bottom: .7rem;
